--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Cache-Control" content="no-cache">
         <meta http-equiv="Cache" content="no-cache">
-        
-        <meta http-equiv="Refresh" content="0; URL=https://yijingframework.github.io/" />
+
+        <meta http-equiv="Refresh" content="0; URL=https://github.com/YiJingFramework/YiJingFramework/wiki" />
     </head>
 </html>
